<resources>
    <string name="app_name">Alif Bee</string>
    <string name="todo">TODO</string>
    <string name="exploration">Exploration Path</string>
    <string name="button">More By Us</string>
    <string name="more_by_us">More By Us</string>
    <string name="top_bar">Top Bar</string>
    <string name="enter_the_numbers">Enter the numbers:</string>
    <string name="number">Four, Nine, Six</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="numdel"><![CDATA[<<]]></string>
    <string name="list_app_dis">Discover the fun world of Arabic with the AlifBee Kids - Let them have fun while ...</string>
    <string name="app_url">View on App Store</string>
    <string name="list_app_name">AlifBee - Learn Arabic The Easy Way</string>
    <string name="parents_lock">Parents Lock</string>
    <string name="more_by_alifBee">More by AlifBee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>