<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="0dp">

    <LinearLayout
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/appsback"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/apps_img"
            android:layout_width="60pt"
            android:layout_height="30pt"
            android:layout_weight="1"
            android:background="@drawable/redofappimg"
            android:contentDescription="@string/todo"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/img3" />

        <LinearLayout
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="2dp">

            <TextView
                android:id="@+id/apps_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis_semi_bold"
                android:text="@string/list_app_name"
                android:textColor="@color/titleofapps"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/apps_dis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis_semi_bold"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/list_app_dis"
                android:textColor="@color/titleofapps"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/apps_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis_semi_bold"
                android:text="@string/app_url"
                android:textColor="@color/url"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>