<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ui.ParentsLock">

    <include
        android:id="@+id/include"
        layout="@layout/topbar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:srcCompat="@drawable/rame" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/dosis_semi_bold"
        android:text="@string/enter_the_numbers"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/dosis_bold"
        android:text="@string/number"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textnum">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/num1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boder"
                android:fontFamily="@font/dosis_semi_bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/boder"
                android:fontFamily="@font/dosis_semi_bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boder"
                android:fontFamily="@font/dosis_semi_bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/bu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num1"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num3"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/bu4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num4"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bu5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num5"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bu6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num6"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/bu7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num7"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bu8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num8"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bu9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num9"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/buh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mybutton"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num0"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/bu0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/num0"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/redbu"
                android:fontFamily="@font/dosis_bold"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:paddingEnd="30dp"
                android:paddingBottom="3dp"
                android:text="@string/numdel"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>