<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical"
    tools:context=".ui.home.HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotationY="@integer/rotate_en"
        android:scaleType="fitXY"
        android:src="@drawable/ba" />

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
       >

        <TextView
            android:id="@+id/toptv"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dosis_bold"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/exploration"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/music_img"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="13dp"
            android:contentDescription="@string/todo"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:srcCompat="@drawable/on"
            />

        <com.example.alifbee.classes.MyCustomView
            android:id="@+id/moreTV"
            android:layout_width="150dp"
            android:layout_height="50dp"
            app:btnBackgrond="@drawable/blue_bg"
            app:btnShadow="@drawable/shadow_of_blue_bg"
            app:btnBorder="@drawable/border_of_blue_bg"
            app:btnTextColor="@color/white"
            app:btnIconVisible="true"
            app:btnIconId="@drawable/buticon"
            app:btnText="@string/more_by_us"
            app:btnTextSize="15sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lin"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/imgslider"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView11">


        </androidx.viewpager2.widget.ViewPager2>


        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/todo"
            android:rotationY="@integer/rotate_en"
            android:scaleType="fitEnd"
            android:src="@drawable/buttomcloudl"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/backimgbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/imageView10"
            android:contentDescription="@string/todo"
            android:rotationY="@integer/rotate_en"
            android:src="@drawable/monofigatiol" />

        <ImageView

            android:id="@+id/nextimgbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/imageView11"
            android:contentDescription="@string/todo"
            android:rotationY="@integer/rotate_ar"
            android:src="@drawable/monofigatiol" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/todo"
            android:rotationY="@integer/rotate_ar"
            android:scaleType="fitEnd"
            android:src="@drawable/buttomcloudl"
            tools:ignore="ImageContrastCheck" />
    </RelativeLayout>

</RelativeLayout>