<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ui.fragments.LockFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/rame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/dosis_semi_bold"
        android:text="@string/enter_the_numbers"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/dosis_bold"
        android:text="@string/number"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textnum"
        app:layout_constraintVertical_bias="0.13"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:id="@+id/num1"
            style="@style/numText"
            android:layout_width="80dp"
            android:background="@drawable/boder"
            android:fontFamily="@font/dosis_semi_bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/bu1"
            app:layout_constraintEnd_toStartOf="@+id/num2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.110000014"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bu1"
            app:btnText="1"
            style="@style/lockBtn"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/bu4"
            app:layout_constraintEnd_toStartOf="@+id/bu2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/num1" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bu4"
            style="@style/lockBtn"
            android:layout_marginTop="10dp"
            app:btnText="4"
            app:layout_constraintBottom_toTopOf="@+id/bu7"
            app:layout_constraintEnd_toStartOf="@+id/bu5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bu1" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bu7"
            style="@style/lockBtn"
            android:layout_marginTop="10dp"
            app:btnText="7"
            app:layout_constraintBottom_toTopOf="@+id/buh"
            app:layout_constraintEnd_toStartOf="@+id/bu8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bu4" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/buh"
            style="@style/lockBtn"
            android:layout_marginTop="10dp"
            app:btnText="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bu0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bu7"
            app:layout_constraintVertical_bias="0.5"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/num2"
            style="@style/numText"
            android:layout_width="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/boder"
            android:fontFamily="@font/dosis_semi_bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/num1"
            app:layout_constraintEnd_toStartOf="@+id/num3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/num1"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/num3"
            style="@style/numText"
            android:layout_width="80dp"
            android:background="@drawable/boder"
            android:fontFamily="@font/dosis_semi_bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/num1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/num2"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bu2"
            style="@style/lockBtn"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:btnText="2"
            app:layout_constraintBottom_toBottomOf="@+id/bu1"
            app:layout_constraintEnd_toStartOf="@+id/bu3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bu1"
            app:layout_constraintTop_toTopOf="@+id/bu1" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bu3"
            style="@style/lockBtn"
            app:btnText="3"
            app:layout_constraintBottom_toBottomOf="@+id/bu2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bu2"
            app:layout_constraintTop_toTopOf="@+id/bu2" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bu5"
            style="@style/lockBtn"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:btnText="5"
            app:layout_constraintBottom_toBottomOf="@+id/bu4"
            app:layout_constraintEnd_toStartOf="@+id/bu6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bu4"
            app:layout_constraintTop_toTopOf="@+id/bu4" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bu6"
            style="@style/lockBtn"
            app:btnText="6"
            app:layout_constraintBottom_toBottomOf="@+id/bu5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bu5"
            app:layout_constraintTop_toTopOf="@+id/bu5" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bu8"
            style="@style/lockBtn"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:btnText="8"
            app:layout_constraintBottom_toBottomOf="@+id/bu7"
            app:layout_constraintEnd_toStartOf="@+id/bu9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bu7"
            app:layout_constraintTop_toTopOf="@+id/bu7" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bu9"
            style="@style/lockBtn"
            app:btnText="9"
            app:layout_constraintBottom_toBottomOf="@+id/bu8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bu8"
            app:layout_constraintTop_toTopOf="@+id/bu8" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bu0"
            style="@style/lockBtn"
            app:btnText="0"
            app:layout_constraintBottom_toBottomOf="@+id/buh"
            app:layout_constraintEnd_toStartOf="@+id/bude"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buh"
            app:layout_constraintTop_toTopOf="@+id/buh" />

        <com.example.alifbee.ui.MyCustomView
            android:id="@+id/bude"
            style="@style/delBtn"
            app:btnText="@string/numdel"
            app:layout_constraintBottom_toBottomOf="@+id/bu0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bu0"
            app:layout_constraintTop_toTopOf="@+id/bu0"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="617dp" />

</androidx.constraintlayout.widget.ConstraintLayout>